@@ -1,0 +1,37 @@
+# This testcase is part of GDB, the GNU debugger.
+
+# Copyright 2008 Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+set testfile "structs3"
+set srcfile ${testfile}.c
+set binfile ${objdir}/${subdir}/${testfile}
+
+if { [prepare_for_testing structs3.exp "structs3" "" {debug}] } {
+    return -1
+}
+
+set vhn "\\$\[0-9\]+"
+
+# Check the real contents.
+gdb_test "print two" "$vhn = {one = {x = 1}, x = 2, y = 3}"
+
+# Check through the pointer.
+gdb_test "print *twop" "$vhn = {one = {x = 1}, x = 2, y = 3}"
+
+# Check through a pointer to a smaller type, casted up.
+gdb_test "print *(struct Two *)onep" "$vhn = {one = {x = 1}, x = 2, y = 3}"
+
+gdb_test "print *(tTwo *)onep" "$vhn = {one = {x = 1}, x = 2, y = 3}"
